discussion/kv_engine/179724/179724_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53354: Add specific CheckpointIndexAllocatorMemoryTrackingTests

Change-Id: Ifd414c61fa70ddfb1e4aa011a9386773827c26fe

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-09-16 12:56:44.000000000
Message: 
Patch Set 6: Patch Set 5 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-16 13:12:31.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20461/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4157:29: error: use of undeclared identifier "createKeyString" [clang-diagnostic-error]
        const auto keyStr = createKeyString(keyN, keyLength);
                            ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20461/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4157:29:
error: use of undeclared identifier "createKeyString" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20461/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49464/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\checkpoint_test.cc(4157): error C3861: "createKeyString": identifier not found ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49464/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22439/ : FAILURE

Compile error at [2022-09-16T13:10:40.628Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4157:29:
error: ?createKeyString? was not declared in this scope; did you mean ?createPaddedKeyString??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22439/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22808/ : FAILURE

Compile error at [2022-09-16T13:09:43.344Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4157:29:
error: ?createKeyString? was not declared in this scope; did you mean ?createPaddedKeyString??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22808/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30836/ : FAILURE

Compile error at [2022-09-16T13:11:40.703Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4157:29:
error: use of undeclared identifier "createKeyString"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30836/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10269/ : FAILURE

Compile error at [2022-09-16T13:02:56.421Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4157:29:
error: ?createKeyString? was not declared in this scope; did you mean ?createPaddedKeyString??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10269/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21818/ : FAILURE

Compile error at [2022-09-16T13:07:47.800Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4157:29:
error: use of undeclared identifier "createKeyString"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21818/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10171/ : FAILURE

Compile error at [2022-09-16T13:08:12.107Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4157:29:
error: use of undeclared identifier "createKeyString"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10171/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23579/ : FAILURE

Compile error at [2022-09-16T13:10:24.219Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4157:29:
error: use of undeclared identifier "createKeyString"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23579/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19683/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41576/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
